--- a/UpSpace/UpSpace/Base.lproj/Main.storyboard
+++ b/UpSpace/UpSpace/Base.lproj/Main.storyboard
@@ -20,7 +20,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="mXC-Ci-jBC" kind="relationship" relationship="viewControllers" id="2pl-ue-apK"/>
+                        <segue destination="BlU-2f-5HE" kind="relationship" relationship="viewControllers" id="IAq-4B-1OA"/>
+                        <segue destination="mXC-Ci-jBC" kind="relationship" relationship="viewControllers" id="iFw-bc-Gx3"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zaZ-rM-mZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -30,7 +31,7 @@
         <!--Next Launches-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="ListLaunchesViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ListLaunchesViewController" customModule="UpSpace" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ListLaunchesViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="NextLaunchesViewController" customModule="UpSpace" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -87,13 +88,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1432.8" y="-414.24287856071965"/>
+            <point key="canvasLocation" x="1410" y="223"/>
         </scene>
-        <!--Item-->
+        <!--Next-->
         <scene sceneID="DEO-qk-Tms">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mXC-Ci-jBC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="eya-Ry-8Zf"/>
+                    <tabBarItem key="tabBarItem" title="Next" id="eya-Ry-8Zf"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="pTY-uD-5fH">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
@@ -106,7 +107,87 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lQl-md-3Oa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="493.60000000000002" y="-414.24287856071965"/>
+            <point key="canvasLocation" x="470" y="223"/>
+        </scene>
+        <!--Today Launches-->
+        <scene sceneID="hVD-Jl-894">
+            <objects>
+                <viewController id="5si-Ob-8KC" customClass="TodayLaunchesViewController" customModule="UpSpace" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cru-tT-fUx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8jl-DY-Pv7">
+                                <rect key="frame" x="0.0" y="116" width="375" height="502"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TodayCell" textLabel="8tO-Rb-UBB" detailTextLabel="hrI-nm-ja2" style="IBUITableViewCellStyleSubtitle" id="FbR-9l-0RF">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FbR-9l-0RF" id="H8c-Nn-FF6">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8tO-Rb-UBB">
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hrI-nm-ja2">
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="5si-Ob-8KC" id="BzW-ZJ-Wrj"/>
+                                    <outlet property="delegate" destination="5si-Ob-8KC" id="ZKw-c4-w0o"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RaF-5H-XIU" firstAttribute="trailing" secondItem="8jl-DY-Pv7" secondAttribute="trailing" id="5DX-ak-qfv"/>
+                            <constraint firstItem="8jl-DY-Pv7" firstAttribute="top" secondItem="RaF-5H-XIU" secondAttribute="top" id="Nxh-3B-5M9"/>
+                            <constraint firstItem="8jl-DY-Pv7" firstAttribute="leading" secondItem="RaF-5H-XIU" secondAttribute="leading" id="bLG-5d-4gg"/>
+                            <constraint firstItem="RaF-5H-XIU" firstAttribute="bottom" secondItem="8jl-DY-Pv7" secondAttribute="bottom" id="gcc-xV-eBw"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RaF-5H-XIU"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Today Launches" id="0Hf-mg-5Nm"/>
+                    <connections>
+                        <outlet property="tableView" destination="8jl-DY-Pv7" id="ITa-GW-wi3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NNE-uz-vfH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1412" y="-602"/>
+        </scene>
+        <!--Today-->
+        <scene sceneID="uOK-2u-46H">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BlU-2f-5HE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Today" id="JkD-Bf-D2F"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Dnp-QA-RVI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="5si-Ob-8KC" kind="relationship" relationship="rootViewController" id="ZE1-ev-l1i"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MjA-f4-6fV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="471" y="-602"/>
         </scene>
     </scenes>
 </document>
