--- a/UpSpace/UpSpace/Base.lproj/Main.storyboard
+++ b/UpSpace/UpSpace/Base.lproj/Main.storyboard
@@ -17,11 +17,13 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7hT-t8-ICZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.99206763505935669" green="0.98442679643630981" blue="0.97647064924240112" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="tintColor" red="0.93473851680755615" green="0.50502282381057739" blue="0.28620833158493042" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="selectedImageTintColor" red="0.93473851679999997" green="0.50502282379999996" blue="0.28620833159999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
                     <connections>
                         <segue destination="BlU-2f-5HE" kind="relationship" relationship="viewControllers" id="IAq-4B-1OA"/>
-                        <segue destination="giI-lh-7El" kind="relationship" relationship="viewControllers" id="waK-p5-OhJ"/>
+                        <segue destination="L8R-WF-iCY" kind="relationship" relationship="viewControllers" id="KZX-Hu-T9O"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zaZ-rM-mZi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -37,7 +39,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ijL-JG-Pag">
-                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -50,15 +52,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7wY-ZQ-hSu"/>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="recents" id="zFW-L9-Edc"/>
                     <navigationItem key="navigationItem" title="Next Launches" largeTitleDisplayMode="never" id="tEj-NE-bta">
                         <barButtonItem key="rightBarButtonItem" id="Q60-lu-vmY">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6Op-Je-j6g">
-                                <rect key="frame" x="276" y="7" width="78" height="30"/>
+                                <rect key="frame" x="281" y="7" width="78" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Previous"/>
-                                <connections>
-                                    <action selector="changeLaunchesControllers:" destination="L8R-WF-iCY" eventType="touchUpInside" id="wlU-J2-qDE"/>
-                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -68,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BU0-cn-GUY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1408.8" y="321.58920539730138"/>
+            <point key="canvasLocation" x="470" y="296"/>
         </scene>
         <!--Today Launches-->
         <scene sceneID="hVD-Jl-894">
@@ -140,6 +140,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Dnp-QA-RVI">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.98422449827194214" green="0.97658389806747437" blue="0.96862751245498657" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -149,25 +150,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MjA-f4-6fV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="471" y="-602"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="9zX-iC-bbv">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="giI-lh-7El" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" systemItem="recents" id="2ff-hL-LbR"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yiZ-Ng-T4h">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="L8R-WF-iCY" kind="relationship" relationship="rootViewController" id="o3p-3V-g5A"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ef0-ot-OzV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="469.60000000000002" y="321.58920539730138"/>
         </scene>
     </scenes>
 </document>
