--- a/UpSpace/UpSpace/Controller/LaunchesViewController/Cell/NextLaunchCell/NextLaunchCell.xib
+++ b/UpSpace/UpSpace/Controller/LaunchesViewController/Cell/NextLaunchCell/NextLaunchCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LaunchCell" rowHeight="78" id="JxV-1C-C5z" customClass="NextLaunchCell" customModule="UpSpace" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="LaunchCell" rowHeight="78" id="JxV-1C-C5z" customClass="NextLaunchCell" customModule="UpSpace" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JxV-1C-C5z" id="eCs-T0-bhb">
@@ -26,16 +26,16 @@
                         </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="M13-Vw-shF">
-                        <rect key="frame" x="74" y="18.5" width="294" height="40.5"/>
+                        <rect key="frame" x="79" y="18.5" width="292" height="40.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Le1-zv-D9B">
-                                <rect key="frame" x="0.0" y="0.0" width="294" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="292" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SY8-EQ-KJv">
-                                <rect key="frame" x="0.0" y="22.5" width="294" height="18"/>
+                                <rect key="frame" x="0.0" y="22.5" width="292" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -43,15 +43,17 @@
                         </subviews>
                     </stackView>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="M13-Vw-shF" secondAttribute="trailing" constant="8" id="3SB-e4-sbU"/>
-                    <constraint firstItem="M13-Vw-shF" firstAttribute="leading" secondItem="eYC-a9-3Vt" secondAttribute="trailing" constant="10" id="DUY-xu-mHg"/>
-                    <constraint firstItem="eYC-a9-3Vt" firstAttribute="centerY" secondItem="eCs-T0-bhb" secondAttribute="centerY" id="Hg1-5l-O6U"/>
-                    <constraint firstItem="M13-Vw-shF" firstAttribute="top" secondItem="eCs-T0-bhb" secondAttribute="top" constant="18.5" id="Laz-pm-2Pf"/>
-                    <constraint firstItem="M13-Vw-shF" firstAttribute="centerY" secondItem="eCs-T0-bhb" secondAttribute="centerY" id="bNh-au-sHf"/>
-                    <constraint firstItem="eYC-a9-3Vt" firstAttribute="leading" secondItem="eCs-T0-bhb" secondAttribute="leading" constant="20" id="yqB-fQ-5St"/>
+                    <constraint firstAttribute="trailing" secondItem="M13-Vw-shF" secondAttribute="trailing" constant="5" id="03x-Hn-OyQ"/>
+                    <constraint firstItem="M13-Vw-shF" firstAttribute="top" secondItem="eCs-T0-bhb" secondAttribute="top" constant="18.5" id="1IW-fI-nNA"/>
+                    <constraint firstItem="eYC-a9-3Vt" firstAttribute="leading" secondItem="eCs-T0-bhb" secondAttribute="leading" constant="20" id="1MO-bP-Tgd"/>
+                    <constraint firstItem="eYC-a9-3Vt" firstAttribute="centerY" secondItem="eCs-T0-bhb" secondAttribute="centerY" id="5u6-x0-rTS"/>
+                    <constraint firstItem="M13-Vw-shF" firstAttribute="leading" secondItem="eYC-a9-3Vt" secondAttribute="trailing" constant="15" id="djx-VU-jrW"/>
+                    <constraint firstItem="M13-Vw-shF" firstAttribute="centerY" secondItem="eCs-T0-bhb" secondAttribute="centerY" id="fWV-6L-Ojp"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="countryIconImageView" destination="eYC-a9-3Vt" id="zvb-B4-tf5"/>
                 <outlet property="dateLabel" destination="SY8-EQ-KJv" id="R77-nd-FLd"/>
