--- a/UpSpace/UpSpace/Controller/LaunchesViewController/LaunchesViewController.storyboard
+++ b/UpSpace/UpSpace/Controller/LaunchesViewController/LaunchesViewController.storyboard
@@ -6,53 +6,36 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Next Launches-->
-        <scene sceneID="PGy-By-sRd">
+        <!--Launches View Controller-->
+        <scene sceneID="hnE-vk-W54">
             <objects>
-                <viewController storyboardIdentifier="LaunchesViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="EFD-n1-T8d" customClass="LaunchesViewController" customModule="UpSpace" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="n8H-yV-PCN">
+                <tableViewController storyboardIdentifier="LaunchesViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="dci-kQ-hW5" customClass="LaunchesViewController" customModule="UpSpace" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="d5s-D6-0i4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j1g-m3-0f9">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="EFD-n1-T8d" id="tYh-LK-mEy"/>
-                                    <outlet property="delegate" destination="EFD-n1-T8d" id="MEu-ug-XQr"/>
-                                    <outlet property="prefetchDataSource" destination="EFD-n1-T8d" id="QJu-X6-qBr"/>
-                                </connections>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="j1g-m3-0f9" firstAttribute="leading" secondItem="yWO-Hb-VcQ" secondAttribute="leading" id="Kex-Pm-gDN"/>
-                            <constraint firstItem="yWO-Hb-VcQ" firstAttribute="trailing" secondItem="j1g-m3-0f9" secondAttribute="trailing" id="VNZ-gx-2ov"/>
-                            <constraint firstItem="j1g-m3-0f9" firstAttribute="top" secondItem="yWO-Hb-VcQ" secondAttribute="top" id="XEA-mf-5nO"/>
-                            <constraint firstItem="yWO-Hb-VcQ" firstAttribute="bottom" secondItem="j1g-m3-0f9" secondAttribute="bottom" id="ihA-xb-Jxj"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="yWO-Hb-VcQ"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Next Launches" id="Ett-BE-o9W">
-                        <barButtonItem key="rightBarButtonItem" id="kgw-Uj-kZs">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="uZs-hb-g1W">
-                                <rect key="frame" x="335" y="7" width="59" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Previous"/>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <outlet property="tableView" destination="j1g-m3-0f9" id="TEc-iY-gBQ"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7A5-OH-QXF" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="rcD-D8-DhN">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="rcD-D8-DhN" id="74Z-ud-7B0">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="dci-kQ-hW5" id="6hB-nE-Vzm"/>
+                            <outlet property="delegate" destination="dci-kQ-hW5" id="vx6-9h-dHN"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vyE-Cs-F56" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1468" y="1248"/>
+            <point key="canvasLocation" x="2275" y="1252"/>
         </scene>
     </scenes>
 </document>
