--- a/UpSpace/UpSpace/Controller/LaunchesViewController/LaunchesTabmanViewController.storyboard
+++ b/UpSpace/UpSpace/Controller/LaunchesViewController/LaunchesTabmanViewController.storyboard
@@ -17,7 +17,7 @@
                     <view key="view" contentMode="scaleToFill" id="AAa-jm-nZY">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.97648364310000002" green="0.97644716499999995" blue="0.97647196049999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <viewLayoutGuide key="safeArea" id="slq-pU-kBz"/>
                     </view>
                 </viewController>
